# ros-bridge

carla_ad_agent/launch/: carla_ad_agent_hero0.launch  carla_ad_agent_hero1.launch  carla_ad_agent_hero2.launch  carla_ad_agent_hero3.launch  carla_ad_agent_hero4.launch  carla_ad_agent_hero5.launch  carla_ad_agent_hero6.launch  carla_ad_agent_hero7.launch  carla_ad_agent_hero8.launch  carla_ad_agent_hero9.launch
carla_ad_cooperative/: CMakeLists.txt  package.xml
carla_ad_cooperative/config/: FollowLeadingVehicle.xosc  FollowLeadingVehicle_12.xosc  FollowLeadingVehicle_2.xosc  FollowLeadingVehicle_xodr.xosc  carla_ad_cooperative.rviz  carla_ad_cooperative_hero.rviz  carla_ad_cooperative_hero0.rviz  carla_ad_cooperative_hero1.rviz  carla_ad_cooperative_hero10.rviz  carla_ad_cooperative_hero2.rviz  carla_ad_cooperative_hero3.rviz  carla_ad_cooperative_hero4.rviz  carla_ad_cooperative_hero5.rviz  carla_ad_cooperative_hero6.rviz  carla_ad_cooperative_hero7.rviz  carla_ad_cooperative_hero8.rviz  carla_ad_cooperative_hero9.rviz
carla_ad_cooperative/launch/: carla_ad_cooperative.launch  carla_ad_cooperative_2.launch  carla_ad_cooperative_3.launch  carla_ad_cooperative_with_scenario.launch  carla_ad_cooperative_with_scenario_1.launch  carla_ad_cooperative_with_scenario_2.launch  carla_ad_cooperative_with_scenario_xodr.launch
carla_ad_demo/launch/: carla_ad_demo.launch
carla_manual_control/launch/: carla_manual_control_hero0.launch  carla_manual_control_hero1.launch  carla_manual_control_hero2.launch  carla_manual_control_hero3.launch  carla_manual_control_hero4.launch  carla_manual_control_hero5.launch  carla_manual_control_hero6.launch  carla_manual_control_hero7.launch  carla_manual_control_hero8.launch  carla_manual_control_hero9.launch
carla_ros_bridge/launch/: carla_ros_bridge.launch
carla_ros_scenario_runner/launch/: carla_ros_scenario_runner_hero.launch  carla_ros_scenario_runner_hero0.launch  carla_ros_scenario_runner_hero1.launch  carla_ros_scenario_runner_hero2.launch  carla_ros_scenario_runner_hero3.launch  carla_ros_scenario_runner_hero4.launch  carla_ros_scenario_runner_hero5.launch  carla_ros_scenario_runner_hero6.launch  carla_ros_scenario_runner_hero7.launch  carla_ros_scenario_runner_hero8.launch  carla_ros_scenario_runner_hero9.launch  carla_ros_scenario_runner_heroo.launch
carla_spawn_objects/config/: objects_10.json  objects_11.json  objects_12.json  objects_2.json  objects_3.json  objects_4.json  objects_5.json  objects_6.json  objects_7.json  objects_8.json  objects_9.json
carla_spawn_objects/launch/: set_initial_pose_hero.launch  set_initial_pose_hero0.launch  set_initial_pose_hero1.launch  set_initial_pose_hero2.launch  set_initial_pose_hero3.launch  set_initial_pose_hero4.launch  set_initial_pose_hero5.launch  set_initial_pose_hero6.launch  set_initial_pose_hero7.launch  set_initial_pose_hero8.launch  set_initial_pose_hero9.launch
carla_waypoint_publisher/launch/: carla_waypoint_publisher.launch  carla_waypoint_publisher_hero.launch  carla_waypoint_publisher_hero0.launch  carla_waypoint_publisher_hero1.launch  carla_waypoint_publisher_hero2.launch  carla_waypoint_publisher_hero3.launch  carla_waypoint_publisher_hero4.launch  carla_waypoint_publisher_hero5.launch  carla_waypoint_publisher_hero6.launch  carla_waypoint_publisher_hero7.launch  carla_waypoint_publisher_hero8.launch  carla_waypoint_publisher_hero9.launch  carla_waypoint_publisher_heroo.launch
(+3 files in other folders)
